[gd_scene load_steps=35 format=3 uid="uid://cbxfw61lb5aev"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_lwidi"]
[ext_resource type="PackedScene" uid="uid://5g150wexitw2" path="res://Scenes/HUDD.tscn" id="2_jjp8n"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="4_5a41x"]
[ext_resource type="PackedScene" uid="uid://d1f6sjkqgggmr" path="res://Scenes/map.tscn" id="4_8csix"]
[ext_resource type="Texture2D" uid="uid://xgq20tgi82m5" path="res://Sprites/AmongUs/walkAll.png" id="5_cds8u"]
[ext_resource type="PackedScene" uid="uid://ff65rksr1vbb" path="res://Scenes/enemy_spawner.tscn" id="5_rxl3d"]
[ext_resource type="PackedScene" uid="uid://dbnr8w6o0gu62" path="res://Scenes/zombie_boss.tscn" id="6_2tjyv"]
[ext_resource type="PackedScene" uid="uid://qrvglhsdhqlr" path="res://Scenes/deagle.tscn" id="6_6g4ww"]
[ext_resource type="AudioStream" uid="uid://87xlouwjqlkc" path="res://Soundfx/gunshot-sfx-foley-impact-shot-gun-xploson-sound-chakongaudio-182540.mp3" id="7_u1xf5"]
[ext_resource type="PackedScene" uid="uid://3utc2fuyrvre" path="res://Scenes/health_component.tscn" id="8_6vd0w"]
[ext_resource type="Texture2D" uid="uid://bmu6mjqyxnj37" path="res://Sprites/final.png" id="9_ddhs5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nboj4"]
radius = 87.945
height = 244.1

[sub_resource type="Animation" id="Animation_gnd6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xebwy"]
resource_name = "standingLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_shsth"]
resource_name = "standingRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_y7p1f"]
resource_name = "walkLeft"
length = 1.01
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mfprl"]
resource_name = "walkRight"
length = 1.01
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kaem2"]
_data = {
"RESET": SubResource("Animation_gnd6k"),
"standingLeft": SubResource("Animation_xebwy"),
"standingRight": SubResource("Animation_shsth"),
"walkLeft": SubResource("Animation_y7p1f"),
"walkRight": SubResource("Animation_mfprl")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0728o"]
atlas = ExtResource("9_ddhs5")
region = Rect2(4320, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbqs8"]
atlas = ExtResource("9_ddhs5")
region = Rect2(4480, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p46jy"]
atlas = ExtResource("9_ddhs5")
region = Rect2(4640, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50k0y"]
atlas = ExtResource("9_ddhs5")
region = Rect2(4800, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au8d2"]
atlas = ExtResource("9_ddhs5")
region = Rect2(4960, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cphyo"]
atlas = ExtResource("9_ddhs5")
region = Rect2(5120, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7d3o"]
atlas = ExtResource("9_ddhs5")
region = Rect2(5280, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47fws"]
atlas = ExtResource("9_ddhs5")
region = Rect2(5440, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1jq5"]
atlas = ExtResource("9_ddhs5")
region = Rect2(5600, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkxwx"]
atlas = ExtResource("9_ddhs5")
region = Rect2(5760, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shlqm"]
atlas = ExtResource("9_ddhs5")
region = Rect2(5920, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdujd"]
atlas = ExtResource("9_ddhs5")
region = Rect2(6080, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsa68"]
atlas = ExtResource("9_ddhs5")
region = Rect2(6240, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juyxs"]
atlas = ExtResource("9_ddhs5")
region = Rect2(6400, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1esp2"]
atlas = ExtResource("9_ddhs5")
region = Rect2(6560, 0, 160, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6m8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0728o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbqs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p46jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50k0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au8d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cphyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7d3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47fws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1jq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkxwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shlqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdujd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsa68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juyxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1esp2")
}],
"loop": true,
"name": &"shootShoutgun",
"speed": 30.0
}]

[node name="World" type="Node2D"]
script = ExtResource("1_lwidi")

[node name="HUD" parent="." instance=ExtResource("2_jjp8n")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1903.0
offset_bottom = 1111.0
color = Color(0.447059, 0.458824, 0.105882, 1)

[node name="map" parent="ColorRect" instance=ExtResource("4_8csix")]

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
position = Vector2(321, 243)
scale = Vector2(0.5, 0.5)
collision_mask = 2
motion_mode = 1
script = ExtResource("4_5a41x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_nboj4")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("5_cds8u")
flip_h = true
hframes = 12
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_kaem2")
}

[node name="deagle" parent="Player" instance=ExtResource("6_6g4ww")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("7_u1xf5")

[node name="pistolAttackSpeed" type="Timer" parent="Player"]

[node name="HealthComponent" parent="Player" instance=ExtResource("8_6vd0w")]

[node name="ShoutgunAttackSpeed" type="Timer" parent="Player"]

[node name="Shoutgun" type="Node2D" parent="Player"]
position = Vector2(-0.09, -12.9)
scale = Vector2(3.34, 3.34)

[node name="ShoutgunAnim" type="AnimatedSprite2D" parent="Player/Shoutgun"]
position = Vector2(45.235, 0)
sprite_frames = SubResource("SpriteFrames_e6m8c")
animation = &"shootShoutgun"

[node name="ShoutgunPos" type="Marker2D" parent="Player/Shoutgun"]
position = Vector2(50.04, 0)

[node name="ShoutgunPosUp" type="Marker2D" parent="Player/Shoutgun/ShoutgunPos"]
position = Vector2(-0.0400009, -25)

[node name="ShoutgunPosDown" type="Marker2D" parent="Player/Shoutgun/ShoutgunPos"]
position = Vector2(-0.0400009, 25)

[node name="EntitiesLayer" type="Node2D" parent="." groups=["EntitiesLayer"]]

[node name="EnemySpawner" parent="." instance=ExtResource("5_rxl3d")]

[node name="EnemySpawner2" parent="." instance=ExtResource("5_rxl3d")]

[node name="EnemySpawner3" parent="." instance=ExtResource("5_rxl3d")]

[node name="ZombieBoss" parent="." instance=ExtResource("6_2tjyv")]
visible = false
position = Vector2(972, 444)

[node name="WavePrepareTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 764.0
offset_top = 6.0
offset_right = 1680.0
offset_bottom = 149.0

[node name="minutes" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = -398.0
offset_right = 129.0
offset_bottom = 147.0

[node name="seconds" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 137.0
offset_top = -1.0
offset_right = 267.0
offset_bottom = 148.0

[node name="msec" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 285.0
offset_top = 3.0
offset_right = 438.0
offset_bottom = 147.0

[node name="wave" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 71.0
offset_top = 49.0
offset_right = 397.0
offset_bottom = 118.0

[connection signal="timeout" from="Player/pistolAttackSpeed" to="Player" method="_on_pistol_attack_speed_timeout"]
[connection signal="timeout" from="WavePrepareTime" to="." method="_on_wave_prepare_time_timeout"]
